@@ -116,8 +116,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>901</width>
-        <height>592</height>
+        <width>880</width>
+        <height>814</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout">
@@ -179,7 +179,31 @@
             </property>
            </widget>
           </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="label_3b">
+            <property name="text">
+             <string>Username:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QLineEdit" name="userName"/>
+          </item>
+          <item row="4" column="0">
+           <widget class="QLabel" name="label_3c">
+            <property name="text">
+             <string>Password:</string>
+            </property>
+           </widget>
+          </item>
           <item row="4" column="1">
+           <widget class="QLineEdit" name="password">
+            <property name="echoMode">
+             <enum>QLineEdit::Password</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1">
            <widget class="QPushButton" name="discoverServer">
             <property name="text">
              <string>Discover</string>
